@@ -1,5 +1,5 @@
 /**
- * Copyright (c) 2010-2020 Contributors to the openHAB project
+ * Copyright (c) 2010-2021 Contributors to the openHAB project
  *
  * See the NOTICE file(s) distributed with this work for additional
  * information.
@@ -14,9 +14,14 @@ package org.openhab.binding.tr064.internal.util;
 
 import static org.openhab.binding.tr064.internal.Tr064BindingConstants.*;
 
+import java.io.ByteArrayInputStream;
 import java.io.InputStream;
 import java.lang.reflect.Field;
+import java.time.Duration;
 import java.util.*;
+import java.util.concurrent.ExecutionException;
+import java.util.concurrent.TimeUnit;
+import java.util.concurrent.TimeoutException;
 import java.util.stream.Collectors;
 import java.util.stream.Stream;
 
@@ -29,6 +34,10 @@ import javax.xml.soap.SOAPMessage;
 import javax.xml.transform.stream.StreamSource;
 
 import org.eclipse.jdt.annotation.NonNullByDefault;
+import org.eclipse.jdt.annotation.Nullable;
+import org.eclipse.jetty.client.HttpClient;
+import org.eclipse.jetty.client.api.ContentResponse;
+import org.eclipse.jetty.http.HttpMethod;
 import org.openhab.binding.tr064.internal.ChannelConfigException;
 import org.openhab.binding.tr064.internal.Tr064RootHandler;
 import org.openhab.binding.tr064.internal.config.Tr064BaseThingConfiguration;
@@ -41,6 +50,7 @@ import org.openhab.binding.tr064.internal.dto.config.ChannelTypeDescriptions;
 import org.openhab.binding.tr064.internal.dto.config.ParameterType;
 import org.openhab.binding.tr064.internal.dto.scpd.root.SCPDServiceType;
 import org.openhab.binding.tr064.internal.dto.scpd.service.*;
+import org.openhab.core.cache.ExpiringCacheMap;
 import org.openhab.core.thing.ChannelUID;
 import org.openhab.core.thing.Thing;
 import org.openhab.core.thing.binding.builder.ChannelBuilder;
@@ -59,6 +69,10 @@ import org.w3c.dom.NodeList;
 @NonNullByDefault
 public class Util {
     private static final Logger LOGGER = LoggerFactory.getLogger(Util.class);
+    private static final int HTTP_REQUEST_TIMEOUT = 5; // in s
+    // cache XML content for 5s
+    private static final ExpiringCacheMap<String, Object> XML_OBJECT_CACHE = new ExpiringCacheMap<>(
+            Duration.ofMillis(3000));
 
     /**
      * read the channel config from the resource file (static initialization)
@@ -75,7 +89,7 @@ public class Util {
             return root.getValue().getChannel();
         } catch (JAXBException e) {
             LOGGER.warn("Failed to read channel definitions", e);
-            return Collections.emptyList();
+            return List.of();
         }
     }
 
@@ -209,7 +223,10 @@ public class Util {
                         } else {
                             // create a channel for each parameter
                             parameters.forEach(parameter -> {
-                                String normalizedParameter = UIDUtils.encode(parameter);
+                                // remove comment: split parameter at '#', discard everything after that and remove
+                                // trailing spaces
+                                String rawParameter = parameter.split("#")[0].trim();
+                                String normalizedParameter = UIDUtils.encode(rawParameter);
                                 ChannelUID channelUID = new ChannelUID(thing.getUID(),
                                         channelId + "_" + normalizedParameter);
                                 ChannelBuilder channelBuilder = ChannelBuilder
@@ -218,7 +235,7 @@ public class Util {
                                         .withLabel(channelTypeDescription.getLabel() + " " + parameter);
                                 thingBuilder.withChannel(channelBuilder.build());
                                 Tr064ChannelConfig channelConfig1 = new Tr064ChannelConfig(channelConfig);
-                                channelConfig1.setParameter(parameter);
+                                channelConfig1.setParameter(rawParameter);
                                 channels.put(channelUID, channelConfig1);
                             });
                         }
@@ -251,7 +268,15 @@ public class Util {
             // validate parameter against pattern
             String parameterPattern = parameter.getPattern();
             if (parameterPattern != null) {
-                parameters.removeIf(param -> !param.matches(parameterPattern));
+                parameters.removeIf(param -> {
+                    if (!param.matches(parameterPattern)) {
+                        LOGGER.warn("Removing {} while processing {}, does not match pattern {}, check config.", param,
+                                channelId, parameterPattern);
+                        return true;
+                    } else {
+                        return false;
+                    }
+                });
             }
 
             // validate parameter against SCPD (if not internal only)
@@ -274,7 +299,7 @@ public class Util {
             }
             return parameters;
         } catch (NoSuchFieldException | IllegalAccessException | IllegalArgumentException e) {
-            throw new ChannelConfigException("Could not get required parameter '" + channelId
+            throw new ChannelConfigException("Could not get required parameter for channel '" + channelId
                     + "' from thing config (missing, empty or invalid)");
         }
     }
@@ -289,5 +314,47 @@ public class Util {
             // if an error occurs, returning an empty Optional is fine
         }
         return Optional.empty();
+    }
+
+    /**
+     * generic unmarshaller
+     *
+     * @param uri the uri of the XML file
+     * @param clazz the class describing the XML file
+     * @return unmarshalling result
+     */
+    @SuppressWarnings("unchecked")
+    public static <T> @Nullable T getAndUnmarshalXML(HttpClient httpClient, String uri, Class<T> clazz) {
+        try {
+            T returnValue = (T) XML_OBJECT_CACHE.putIfAbsentAndGet(uri, () -> {
+                try {
+                    LOGGER.trace("Refreshing cache for '{}'", uri);
+                    ContentResponse contentResponse = httpClient.newRequest(uri)
+                            .timeout(HTTP_REQUEST_TIMEOUT, TimeUnit.SECONDS).method(HttpMethod.GET).send();
+                    byte[] response = contentResponse.getContent();
+                    if (LOGGER.isTraceEnabled()) {
+                        LOGGER.trace("XML = {}", new String(response));
+                    }
+                    InputStream xml = new ByteArrayInputStream(response);
+
+                    JAXBContext context = JAXBContext.newInstance(clazz);
+                    Unmarshaller um = context.createUnmarshaller();
+                    T newValue = um.unmarshal(new StreamSource(xml), clazz).getValue();
+                    LOGGER.trace("Storing in cache {}", newValue);
+                    return newValue;
+                } catch (ExecutionException | InterruptedException | TimeoutException e) {
+                    LOGGER.debug("HTTP Failed to GET uri '{}': {}", uri, e.getMessage());
+                    throw new IllegalArgumentException();
+                } catch (JAXBException e) {
+                    LOGGER.debug("Unmarshalling failed: {}", e.getMessage());
+                    throw new IllegalArgumentException();
+                }
+            });
+            LOGGER.trace("Returning from cache: {}", returnValue);
+            return returnValue;
+        } catch (IllegalArgumentException e) {
+            // already logged
+        }
+        return null;
     }
 }
